Edit administration layer and add BarCode service

--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/Index.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/Index.cshtml
@@ -108,17 +108,17 @@
 <div class="container-fluid mt--6">
     <div class="card bg-default shadow">
         <div class="card-header bg-transparent border-0">
-            <h3 class="text-white mb-0">Dark table</h3>
+            <h3 class="text-white mb-0">Most Rated Events </h3>
         </div>
         <div class="table-responsive">
             <table class="table align-items-center table-dark table-flush">
                 <thead class="thead-dark">
                     <tr>
-                        <th scope="col" class="sort" data-sort="name">Name</th>
+                        <th scope="col" class="sort" data-sort="name">Name Event</th>
                         <th scope="col" class="sort" data-sort="date">Date</th>
                         <th scope="col" class="sort" data-sort="location">Location</th>
-                        <th scope="col" class="sort" data-sort="completion">Positive</th>
-                        <th scope="col" class="sort" data-sort="completion">Negative</th>
+                        <th scope="col" class="sort" data-sort="completion">Positive Votes</th>
+                        <th scope="col" class="sort" data-sort="completion">Negative Votes</th>
                     </tr>
                 </thead>
                 <tbody class="list">
