--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Events/CreateEvent.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Events/CreateEvent.cshtml
@@ -10,7 +10,7 @@
         <div class="header-body">
             <div class="row align-items-center py-4">
                 <div class="col-lg-6 col-7">
-                    <h6 class="h2 text-white d-inline-block mb-0">Tables</h6>
+                    <h6 class="h2 text-white d-inline-block mb-0">Events</h6>
                     <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                             <li class="breadcrumb-item"><a><i class="fas fa-home"></i></a></li>
@@ -21,9 +21,7 @@
                 </div>
                 <div class="col-lg-6 col-5 text-right">
                     <a asp-controller="Events" asp-action="CreateField" class="btn btn-sm btn-neutral">New field</a>
-                    <a asp-area="" asp-controller="Team" asp-action="Events" class="btn btn-sm btn-neutral">
-                        <i class="fas fa-bullhorn text-primary"></i>
-                       All evnts
+                    <a asp-area="" asp-controller="Team" asp-action="Events" class="btn btn-sm btn-neutral">Evnts
                     </a>
                 </div>
             </div>
