--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_Layout.cshtml
@@ -28,16 +28,19 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Players" asp-action="Index">Player</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Players" asp-action="Index">Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Index">Events</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Index">Event</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Index">Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Events">Events</a>
                         </li>
                     </ul>
                 </div>
