--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/AllMessages.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/AllMessages.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AirsoftApplication.Web.ViewModels.Administration.Contacts.MessageViewModel>
+﻿@model AirsoftApplication.Web.ViewModels.Administration.Contacts.AllMessagesViewModel
 
 <div class="header bg-primary pb-6">
     <div class="container-fluid">
@@ -6,7 +6,7 @@
             <div class="row align-items-center py-4">
                 <div class="col-lg-6 col-7">
                     <h6 class="h2 text-white d-inline-block mb-0">Messages Center</h6>
-                    <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                    <nav aria-label="breadcrumb" class="d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                             <li class="breadcrumb-item"><a><i class="fas fa-home"></i></a></li>
                             <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Dashboards</a></li>
@@ -14,7 +14,7 @@
                         </ol>
                     </nav>
                 </div>
-                <div class="col-lg-6 col-5 text-right">
+                <div class="col-lg-6 col-sm-2 col-5 text-right">
                     <a asp-controller="Dashboard" asp-action="AllMessages" class="btn btn-sm btn-neutral">
                         <i class="fas fa-bell"></i> Messages
                     </a>
@@ -46,94 +46,69 @@
                             </tr>
                         </thead>
                         <tbody class="list">
-                            @foreach (var message in Model)
+                            @foreach (var message in Model.Messages)
                             {
-                            <tr>
-                                <th scope="row">
-                                    <div class="media align-items-center">
-                                        <div class="media-body">
-                                            <span class="name mb-0 text-sm">@message.CreatedOn</span>
-                                        </div>
-                                    </div>
-                                </th>
-                                <th scope="row">
-                                    <div class="media align-items-center">
-                                        <div class="media-body">
-                                            <span class="name mb-0 text-sm">@message.Username</span>
-                                        </div>
-                                    </div>
-                                </th>
-                                <th scope="row">
-                                    <div class="media align-items-center">
-                                        <div class="media-body">
-                                            <span class="name mb-0 text-sm">@message.Email</span>
-                                        </div>
-                                    </div>
-                                </th>
-                                <th scope="row">
-                                    <div class="media align-items-center">
-                                        <div class="media-body">
-                                            <span class="name mb-0 text-sm">@message.Subject</span>
-                                        </div>
-                                    </div>
-                                </th>
-                                <th scope="row">
-                                    <div class="media align-items-center">
-                                        <a asp-action="MessageById" asp-controller="Dashboard" asp-route-messageId="@message.Id">
+                                <tr>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
                                             <div class="media-body">
-                                                <span class="name mb-0 text-sm">Content</span>
+                                                <span class="name mb-0 text-sm">@message.CreatedOn</span>
                                             </div>
-                                        </a>
-                                    </div>
-                                </th>
-                                <td>
-                                    @if (message.HasBeenRead)
-                                    {
-                                        <span class="badge badge-dot mr-4">
-                                            <i class="bg-green"></i>
-                                            <span class="status"> </span>
-                                        </span>
-                                    }
-                                    else
-                                    {
-                                        <span class="badge badge-dot mr-4">
-                                            <i class="bg-red"></i>
-                                            <span class="status"></span>
-                                        </span>
-                                    }
-                                </td>
-                                <td>
-                                </td>
-                            </tr>
+                                        </div>
+                                    </th>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
+                                            <div class="media-body">
+                                                <span class="name mb-0 text-sm">@message.Username</span>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
+                                            <div class="media-body">
+                                                <span class="name mb-0 text-sm">@message.Email</span>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
+                                            <div class="media-body">
+                                                <span class="name mb-0 text-sm">@message.Subject</span>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
+                                            <a asp-action="MessageById" asp-controller="Dashboard" asp-route-messageId="@message.Id">
+                                                <div class="media-body">
+                                                    <span class="name mb-0 text-sm">Content</span>
+                                                </div>
+                                            </a>
+                                        </div>
+                                    </th>
+                                    <td>
+                                        @if (message.HasBeenRead)
+                                        {
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-green"></i>
+                                                <span class="status"> </span>
+                                            </span>
+                                        }
+                                        else
+                                        {
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-red"></i>
+                                                <span class="status"></span>
+                                            </span>
+                                        }
+                                    </td>
+                                    <td>
+                                    </td>
+                                </tr>
                             }
                     </table>
-
-                    <!-- Card footer -->
-                    <div class="card-footer py-4">
-                        <nav aria-label="...">
-                            <ul class="pagination justify-content-end mb-0">
-                                <li class="page-item disabled">
-                                    <a class="page-link" href="#" tabindex="-1">
-                                        <i class="fas fa-angle-left"></i>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                </li>
-                                <li class="page-item active">
-                                    <a class="page-link" href="#">1</a>
-                                </li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">
-                                        <i class="fas fa-angle-right"></i>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+                    <br />
+                    <partial name="_PagingPartial" model="@Model" />
                 </div>
             </div>
         </div>
