--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_PagingPartial.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_PagingPartial.cshtml
@@ -1,11 +1,15 @@
 ﻿@model PagingViewModel
 
+@{
+    var actionName = this.ViewData["ActionName"];
+}
+
 <nav aria-label="...">
     <ul class="pagination justify-content-end">
 
         <li class="page-item @if (!Model.HasPreviousPage) { <text>disabled</text> }">
 
-            <a class="page-link" asp-action="AllMessages" asp-route-page="@Model.PreviousPageNumber">
+            <a class="page-link" asp-action="@actionName" asp-route-page="@Model.PreviousPageNumber">
                 <i class="fas fa-arrow-alt-circle-left text-blue"></i>
             </a>
         </li>
@@ -14,7 +18,7 @@
         {
             if (i > 0)
             {
-                <li class="page-item"><a class="page-link" asp-action="AllMessages" asp-route-page="@i">@i</a></li>
+                <li class="page-item"><a class="page-link" asp-action="@actionName" asp-route-page="@i">@i</a></li>
             }
         }
 
@@ -29,12 +33,12 @@
         {
             if (i <= Model.PagesCount)
             {
-                <li class="page-item"><a class="page-link" asp-action="AllMessages" asp-route-page="@i">@i</a></li>
+                <li class="page-item"><a class="page-link" asp-action="@actionName" asp-route-page="@i">@i</a></li>
             }
         }
         <li class="page-item @if (!Model.HasNextPage) { <text>disabled</text> }">
 
-            <a class="page-link" asp-action="AllMessages" asp-route-page="@Model.NextPageNumber">
+            <a class="page-link" asp-action="@actionName" asp-route-page="@Model.NextPageNumber">
                 <i class="fas fa-arrow-alt-circle-right text-blue"></i>
             </a>
         </li>
