--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/_ViewImports.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,8 @@
 ﻿@using AirsoftApplication.Web
 @using AirsoftApplication.Web.ViewModels
+@using Microsoft.AspNetCore.Identity
+@using AirsoftApplication.Data.Models.Users
+@using AirsoftApplication.Web.ViewModels.Events
+@using AirsoftApplication.Web.ViewModels.Comments
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AirsoftApplication.Web
