--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Users/AllPlayers.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Users/AllPlayers.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AirsoftApplication.Web.ViewModels.Users.UserViewModel>
+﻿@model AllUsersViewModel
 
 <div class="header bg-primary pb-6">
     <div class="container-fluid">
@@ -46,9 +46,8 @@
                             </tr>
                         </thead>
                         <tbody class="list">
-                            @foreach (var user in Model)
+                            @foreach (var user in Model.Players)
                             {
-
                                 <tr>
                                     @if (user.ProfileImageUrl != null)
                                     {
@@ -117,34 +116,8 @@
                                 </tr>
                             }
 
-                    </table>
-
-                    <!-- Card footer -->
-                    <div class="card-footer py-4">
-                        <nav aria-label="...">
-                            <ul class="pagination justify-content-end mb-0">
-                                <li class="page-item disabled">
-                                    <a class="page-link" href="#" tabindex="-1">
-                                        <i class="fas fa-angle-left"></i>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                </li>
-                                <li class="page-item active">
-                                    <a class="page-link" href="#">1</a>
-                                </li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">
-                                        <i class="fas fa-angle-right"></i>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+                    </table><br />
+                    <partial name="_PagingPartial" model="@Model" />
                 </div>
             </div>
         </div>
