--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/_ViewImports.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AirsoftApplication.Web
 @using AirsoftApplication.Web.ViewModels
+@using AirsoftApplication.Web.ViewModels.Users
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AirsoftApplication.Web
