--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_CommentPartial.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_CommentPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@model AirsoftApplication.Web.ViewModels.Events.EventDeteilsViewModel
-@inject Microsoft.AspNetCore.Identity.UserManager<AirsoftApplication.Data.Models.Users.ApplicationUser> UserManager
+﻿@model EventDeteilsViewModel
+@inject UserManager<ApplicationUser> UserManager
 
 @{
     var user = await this.UserManager.GetUserAsync(this.User);
@@ -34,7 +34,7 @@
             <p class="mb-0">@comment.Content</p>
             <hr />
 
-            <partial name="_CommentContentPartial" model="@comment" />
+            <partial name="_CommentContentPartial" model="@comment.SubComments" />
 
             <div class="d-md-flex justify-content-md-end">
                 <a class="btn btn-primary btn-sm mr-1" asp-controller="Comments" asp-action="SubComment" asp-route-eventId="@Model.Id" asp-route-commentId="@comment.Id">Comment</a>
@@ -69,12 +69,49 @@
                         </a>
                     }
                 }
-
-
-
-
             </div>
             <hr />
         </div>
     </div>
 }
+
+<nav aria-label="...">
+    <ul class="pagination justify-content-center">
+
+        <li class="page-item @if (!Model.HasPreviousPage) { <text>disabled</text> }">
+
+            <a class="page-link" asp-action="EventDetails" asp-route-eventId="@Model.Id" asp-route-page="@Model.PreviousPageNumber">
+                <i class="fas fa-arrow-alt-circle-left text-blue"></i>
+            </a>
+        </li>
+
+        @for (int i = Model.PageNumber - 4; i < Model.PageNumber; i++)
+        {
+            if (i > 0)
+            {
+                <li class="page-item"><a class="page-link" asp-action="EventDetails" asp-route-eventId="@Model.Id" asp-route-page="@i">@i</a></li>
+            }
+        }
+
+        <li class="page-item active" aria-current="page">
+            <span class="page-link">
+                @Model.PageNumber
+                <span class="sr-only">(current)</span>
+            </span>
+        </li>
+
+        @for (int i = Model.PageNumber + 1; i <= Model.PageNumber + 4; i++)
+        {
+            if (i <= Model.PagesCount)
+            {
+                <li class="page-item"><a class="page-link" asp-action="EventDetails" asp-route-eventId="@Model.Id" asp-route-page="@i">@i</a></li>
+            }
+        }
+        <li class="page-item @if (!Model.HasNextPage) { <text>disabled</text> }">
+
+            <a class="page-link" asp-action="EventDetails" asp-route-eventId="@Model.Id" asp-route-page="@Model.NextPageNumber">
+                <i class="fas fa-arrow-alt-circle-right text-blue"></i>
+            </a>
+        </li>
+    </ul>
+</nav>
