--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/_ViewImports.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using AirsoftApplication.Web
 @using AirsoftApplication.Web.ViewModels
 @using AirsoftApplication.Web.ViewModels.Users
+@using AirsoftApplication.Web.ViewModels.Administration.Users
+@using AirsoftApplication.Web.ViewModels.Administration.Statistics
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AirsoftApplication.Web
