--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Home/Index.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Home/Index.cshtml
@@ -5,9 +5,17 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Graoforce Team</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+@if (this.TempData.ContainsKey("SendMessage"))
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @this.TempData["SendMessage"].
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
 
 <div class="mb-5"></div>
 
@@ -23,13 +31,13 @@
         <div class="carousel-item">
             <img class="d-block w-100" src="~/Images/Airsoft-2.jpg" alt="Second slide" style="height:500px">
             <div class="carousel-caption d-none d-md-block">
-                <h5><a class="btn btn-primary" asp-controller="Team" asp-action="Players">Graforce Team</a></h5>
+                <h5><a class="btn btn-primary" asp-controller="Team" asp-action="Index">Graforce Team</a></h5>
             </div>
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="~/Images/Airsoft-3.jpg" alt="Third slide" style="height:500px">
             <div class="carousel-caption d-none d-md-block">
-                <h5><a class="btn btn-primary" asp-controller="Team" asp-action="Players">About us</a></h5>
+                <h5><a class="btn btn-primary" asp-controller="Team" asp-action="About">About us</a></h5>
             </div>
         </div>
     </div>
@@ -58,7 +66,7 @@
         <div class="col-md-4   text-center xs mb-2">
             <span>
                 <i class="fab fa-gitkraken" style="color:cornflowerblue"></i>
-                <strong>Section</strong> 
+                <strong>Section</strong>
             </span>
             <hr />
             <p>
